--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HelpActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".ArtistSetlistActivity"/>
+        </activity>
+        <activity android:name=".AboutActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".SetListerActivity"/>
+        </activity>
         <activity
             android:name=".SetListerActivity"
             android:label="@string/app_name" >
@@ -27,7 +35,8 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".SetListerActivity"/>
         </activity>
-        <activity android:name=".ArtistSetlistActivity">
+        <activity android:name=".ArtistSetlistActivity"
+            android:launchMode="singleTop">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ArtistListActivity"/>
         </activity>
